kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: kim
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: cslauritsen/kimlauritsen-org:0.1
        resources:
          limits:
            memory: "64Mi"
            cpu: "300m"
          requests:
            memory: "32Mi"
            cpu: "1m"
        ports:
        - containerPort: 80
