kubernetes/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: kim
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: kim
  annotations:
    kubernetes.io/ingress.class: "traefik"
    # Tell traefik to use HTTP to talk to the backend
    ingress.kubernetes.io/protocol: http
    # redirect inbound http -> https
    traefik.ingress.kubernetes.io/redirect-entry-point: https 
#   cert-manager.io/cluster-issuer: "letsencrypt-prod"
#   traefik.ingress.kubernetes.io/router.middlewares: kim-redirect-https@kubernetescrd
spec:
  tls:
  - hosts:
    - kimlauritsen.com
    - kimlauritsen.org
    secretName: tls-secret-prod
  rules:

    - host: kimlauritsen.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port: 
                  name: http

    - host: kimlauritsen.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port: 
                  name: http
